z-index fix with .top

--- a/css/light/home.css
+++ b/css/light/home.css
@@ -96,7 +96,7 @@
 	position: relative;
 	width: 965px;
 	margin-bottom: 0px;
-	z-index: 10000;
+	z-index: 1000;
 	
 }
 #page-content .middle .heading {
